prov-template-compiler: removed dependency on java 12, but introduced MAVEN_OPTS to support jsweet